--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "devDependencies": {
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
+    "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^7.1.1",
+    "css-minimizer-webpack-plugin": "^7.0.0",
+    "cssnano": "^7.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.0",
+    "postcss-loader": "^8.1.1",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
-
     "webpack-dev-server": "^5.0.4",
     "webpack-manifest-plugin": "^5.0.0"
   },
@@ -24,10 +27,8 @@
   },
   "keywords": [],
   "author": "",
-
   "license": "ISC",
   "dependencies": {
     "core-js": "^3.37.0"
   }
-
 }
